# Crypto-Data-Processing-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
data/sample/: README.md  binance_spot_trades_edge_cases.csv  binance_spot_trades_valid.csv
docs/: AI_EXECUTION_PROMPT.md  ARCHITECTURE.md  BACKLOG.md  CHECKLIST.md  CONTRIBUTING.md  NEXT_STEP.md  ROADMAP.md  RUNBOOK.md  STATUS.md  🚀 Crypto Data Processing Engine.md
docs/ADR/: 001-fastapi.md  002-postgresql.md  003-redis-queue.md  004-fifo-first.md  005-clean-architecture.md  006-alembic-pipeline.md
src/: config.py
src/api/: main.py
src/domain/entities/: asset_position.py  processing_job.py  processing_result.py  transaction.py  validation_error.py
src/domain/ports/: i_job_repository.py  i_result_repository.py  i_transaction_repository.py  i_validation_error_repository.py
src/domain/services/: cost_basis_calculator.py  profit_loss_calculator.py  transaction_normalizer.py  transaction_validator.py
src/domain/value_objects/: asset_symbol.py  cost_basis_method.py  job_status.py  money.py  quantity.py  transaction_type.py
src/infra/parsers/: binance_csv_parser.py
tests/: conftest.py
tests/unit/domain/: test_asset_symbol.py  test_money.py
tests/unit/domain/entities/: test_asset_position.py  test_processing_job.py  test_processing_result.py  test_transaction.py  test_validation_error.py
tests/unit/domain/ports/: test_i_job_repository.py  test_i_result_repository.py  test_i_transaction_repository.py  test_i_validation_error_repository.py
tests/unit/domain/services/: test_cost_basis_calculator.py  test_profit_loss_calculator.py  test_transaction_normalizer.py  test_transaction_validator.py
tests/unit/domain/value_objects/: test_enums.py  test_job_status.py  test_money.py  test_quantity.py
tests/unit/infra/parsers/: test_binance_csv_parser.py
