[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-data-processing-platform"
version = "0.1.0"
description = "Financial transaction processing engine for cryptocurrency data."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "black>=25.0.0",
    "mypy>=1.14.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ------------------------------------------------------------------------------
# Ruff — linter
# ------------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# ------------------------------------------------------------------------------
# Black — formatter
# ------------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py312"]

# ------------------------------------------------------------------------------
# Mypy — type checker
# ------------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

# ------------------------------------------------------------------------------
# Pytest
# ------------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
